# Pacman

./: .gitignore  CMakeLists.txt  README.md
configuration/: config.cfg  variable.cfg
src/: Core.cpp  Core.h  main.cpp
src/Configuration/include/: ConfigurationLoader.h
src/Error/: Error.cpp  Error.h  ErrorHandler.cpp  ErrorHandler.h
src/Error/include/: Error.h  ErrorHandler.h  ErrorNone.h
src/Error/src/: Error.cpp
src/Interface/: IError.h  IScene.h  IWindow.h
src/Scene/include/: GameScene.h
src/Scene/src/: GameScene.cpp
src/UI/include/: Button.h  Pacman.h
src/UI/src/: Button.cpp  Pacman.cpp
src/Window/: Window.h
